Generate converters in same CL as the target type
    Fixes #15657